--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Paulo Cerqueira Jr
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: Exemplo de página no GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
