--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Paulo Cerqueira Jr
-logo: /assets/img/logo.png
+logo: /assets/img/paulo_img.jpg
 description: Exemplo de página no GitHub Pages.
 show_downloads: true
 google_analytics:
