--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,7 +1,7 @@
 project:
   type: website
-  pre-render:
-    - scripts/pre_create_papers_file.py
+  # pre-render:
+    #- scripts/pre_create_papers_file.py
     # - scripts/pre_check_skierg_records.py
     # - scripts/pre_doi_from_rogue_scholar.py
     # - scripts/pre_canonicalise_tags.py
